# ME5413_Final_Project

./: README.md
src/amcl/src/: amcl_node.cpp
src/jackal_description/urdf/: jackal.urdf.xacro
src/me5413_world/: CMakeLists.txt
src/me5413_world/launch/: navigation.launch  slam_toolbox_mapping.launch
src/me5413_world/maps/: my_map.pgm  my_map.yaml
src/me5413_world/rviz/: navigation.rviz  slam_toolbox.rviz
src/me5413_world/scripts/: task_executor.py
src/me5413_world/scripts/__pycache__/: task_executor.cpython-313.pyc.1527630111200  task_executor.cpython-313.pyc.3140839317984
src/me5413_world/src/: initial_pose_publisher.cpp
src/slam_toolbox/slam_toolbox/config/: mapper_params_online_async.yaml
src/yolov5_detector/: CMakeLists.txt  README.md  package.xml
src/yolov5_detector/launch/: yolov5_detector.launch
src/yolov5_detector/scripts/: block_detector_yolov5_node.py  easyocr_digit_node.py  room_digit_detector_node.py
src/yolov5_detector/scripts/__pycache__/: block_detector_yolov5_node.cpython-313.pyc.2520686225200  digit_fusion_node.cpython-313.pyc.2651050058208
src/yolov5_detector/yolov5/: pyproject.toml  train.py  tutorial.ipynb
src/yolov5_detector/yolov5/.github/: dependabot.yml
src/yolov5_detector/yolov5/.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
src/yolov5_detector/yolov5/.github/workflows/: ci-testing.yml  cla.yml  docker.yml  format.yml  links.yml  merge-main-into-prs.yml  stale.yml
src/yolov5_detector/yolov5/classify/: tutorial.ipynb
src/yolov5_detector/yolov5/models/: common.py
src/yolov5_detector/yolov5/segment/: train.py  tutorial.ipynb  val.py
src/yolov5_detector/yolov5/utils/google_app_engine/: additional_requirements.txt
